Fixed: some css fixed & js added
css fixed:
-header overflow fixed
-logo not showing in small device fixed
-margin & padding problem fixed
js added:
-encryption decryption new option added
-copy text to clipboard button added

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body{
 }
 header{
     height: 15%;
+    background-color: #474787;
 }
 .logo{
     color:rgb(194, 194, 194);
@@ -24,6 +25,13 @@ header{
     animation-iteration-count: infinite;
     animation-duration: 3s;
     animation-timing-function: ease-in-out;
+}
+@media screen and (max-width: 600px)
+{
+    .logo{
+        background-image: none;
+        -webkit-text-fill-color: white;
+    }
 }
 
 .logo:hover{
@@ -57,6 +65,9 @@ main{
 
 .box{
     background-color: #706fd3 !important;
+}
+#all-part{
+    display: none;
 }
 #decryption{
     display: none;
